[package]
name = "campfire"
version = "0.1.0"
authors = ["Marcus Bauer <marcus@bauer.wf>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
lazy_static = "1.4.0"
pulldown-cmark = "0.8.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
