[package]
name = "campfire"
description = "A tiny static site generator, greatly inspired by Zola."
version = "0.0.1"
authors = ["Marcus Bauer <marcus@bauer.wf>"]
edition = "2018"
repository = "https://github.com/mabako/campfire"
license = "MIT"

[dependencies]
chrono = "0.4"
lazy_static = "1.4.0"
pulldown-cmark = "0.8.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
