[package]
name = "campfire"
description = "A tiny static site generator, greatly inspired by Zola."
version = "0.0.2"
authors = ["Marcus Bauer <marcus@bauer.wf>"]
edition = "2018"
repository = "https://github.com/mabako/campfire"
license = "MIT"
exclude = ["/example-vault"]

[dependencies]
chrono = "0.4"
clap = "2.33"
lazy_static = "1.4.0"
log = "0.4"
pretty_env_logger = "0.4"
pulldown-cmark = "0.8.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
slug = "0.1.4"
tera = "1"
